Fixed layout issues and organised the code base

--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
 }
 
 .text-grad {
-  background-image: linear-gradient(to top, #000, rgb(255, 255, 255, 0));
+  background-image: linear-gradient(to top, #000, rgb(0, 0, 0, 0.3));
 }
 
 .nav-with-gradient::after {
